refactor(datasource): migrate jdbc base to plugin descriptor